add active database to guibridge